--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <title>About Perry</title>
 </head>
 
-
+<!--Top of Webpage-->
 <body>
     <header>
         <h1>Perry Fordjour</h1>
         <h4> Software Engineer</h4>
     </header>
-
+<!--Picture Inclusion-->
     <main>
              <div class="perry">
                  <img src="pictures/perry-head-shot.jpg" width="430" alt = "perry" />
             </div>
 
             
-
+<!--All text and div-->
             <div class="intro">
                 <h3>Hello I'm Perry Fordjour</h3>
                 <p>I"m a soon to be Software Engineer who lives in Fontana, California </p>
@@ -31,10 +31,9 @@
 
             <div class="about">
                 <h3> About Perry </h3>
-                <p>Coding has always been something I've wanted to pursue since my childhood, and I'm now taking the steps to fulfill my dreams. 
+                <p>Coding has always been something I've wanted to pursue since my childhood, and I'm now taking the steps to fulfill my dreams. </p>
                   <p>With the amount of time I've spent in clubs during school and working since my early high school years, I've developed a love for working with others, whether it be as a leader or part of a team.</p>   
-                    I enjoy working out since it helps me develop good habits and discipline. I also love thrifting for new clothes and updating my wardrobe.
-                </p>
+                    <p>I enjoy working out since it helps me develop good habits and discipline. I also love thrifting for new clothes and updating my wardrobe.</p>
             </div>
 
             <hr>
@@ -43,6 +42,7 @@
                 <h3> Contact Perry </h3>
                 <p> You can find me here to get in contact with me! Hope to hear from you soon </p>
                 <ul>
+<!--Made own link names-->
                  <li><a href="https://www.linkedin.com/in/perry-fordjour-1b1076273/">My LinkedIn</a></li>
                  <li><a href="https://github.com/PerryEngi">My GitHub</a></li>
                 </ul>
