got rid of end tags on image and css link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>About Perry</title>
 </head>
 
@@ -16,7 +16,7 @@
 <!--Picture Inclusion-->
     <main>
              <div class="perry">
-                 <img src="pictures/perry-head-shot.jpg" width="430" alt = "perry" />
+                 <img src="pictures/perry-head-shot.jpg" width="430" alt = "perry" >
             </div>
 
             
