moved links in contact towards center

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!--Top of Webpage-->
 <body>
     <header>
-        <h1>Perry Fordjour</h1>
+        <h1 style="margin-top: 0">Perry Fordjour</h1>
         <h4> Software Engineer</h4>
     </header>
 <!--Picture Inclusion-->
@@ -41,11 +41,13 @@
             <div class ="contact">
                 <h3> Contact Perry </h3>
                 <p> You can find me here to get in contact with me! Hope to hear from you soon </p>
+            <div>
                 <ul>
 <!--Made own link names-->
                  <li><a href="https://www.linkedin.com/in/perry-fordjour-1b1076273/">My LinkedIn</a></li>
                  <li><a href="https://github.com/PerryEngi">My GitHub</a></li>
                 </ul>
+            </div>
             </div>
     </main>
     
